Moved the dimension control box to the left to prevent overlap with tall models

--- a/utils/global.css
+++ b/utils/global.css
@@ -132,7 +132,8 @@ model-viewer > #ar-prompt > img {
 @media (min-width: 768px) {
   #controlContainer {
     top: 8px;
-    left: 0;
+    text-align: left;
+    left: 8px;
   }
 }
 
